src/test/ui/rfc-2627-raw-dylib/link-ordinal-not-foreign-fn.stderr
error: attribute should be applied to a foreign function or static
  --> $DIR/link-ordinal-not-foreign-fn.rs:3:1
   |
LL | #[link_ordinal(123)]
   | ^^^^^^^^^^^^^^^^^^^^

error: attribute should be applied to a foreign function or static
  --> $DIR/link-ordinal-not-foreign-fn.rs:7:1
   |
LL | #[link_ordinal(123)]
   | ^^^^^^^^^^^^^^^^^^^^

error: attribute should be applied to a foreign function or static
  --> $DIR/link-ordinal-not-foreign-fn.rs:11:1
   |
LL | #[link_ordinal(42)]
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

